<resources>
    <string name="app_name">Disney Quiz</string>
    <string name="title">Disney Quiz</string>
    <string name="intro">Solve the quiz to check how well you know the classic Disney animated movies</string>
    <string name="solve_the_quiz">Start the quiz</string>
    <string name="Question1">Rowan Atkinson, best known for his work as Mr. Bean gave his voice to one of these characters. Which one?</string>
    <string name="next">Next</string>
    <string name="Q1A1">Ed, the giggling hyena from The Lion King</string>
    <string name="Q1A2">Philoctetes, Hercules\' satyr friend and trainer</string>
    <string name="Q1A3">Zazu, Mufasa\'s majordomo (The Lion King)</string>
    <string name="Q1A4">Genie from Aladdin</string>
    <string name="Q1A5">Cogsworth, the majordomo in Beast\'s castle, from the original Beauty and the Beast animation</string>
    <string name="Question2">What was the name of Jasmine\'s pet tiger?</string>
    <string name="Q2A1">Rajesh</string>
    <string name="Q2A2">Rajan</string>
    <string name="Q2A3">Sahara</string>
    <string name="Q2A4">Sarabi</string>
    <string name="Q2A5">Serafine</string>
    <string name="title_activity_question3">Question3</string>
    <string name="title_activity_question4">Question4</string>
    <string name="Question3">What was the name of the Emperor changed into a llama in The Emperor\'s New Groove?</string>
    <string name="llama_king_hint">Enter the llama king\'s name here</string>
    <string name="llama_close_toast">That\'s close but you need to check your spelling :)</string>
    <string name="incorrect_toast">Unfortunately that was not the correct answer. Better luck next time!</string>
    <string name="correct_toast">Correct!</string>
    <string name="Question4">Choose the names that do NOT belong to any \nof the 7 dwarfs:</string>
    <string name="Q4A1">Doc</string>
    <string name="Q4A2">Grumpy</string>
    <string name="Q4A3">Lazy</string>
    <string name="Q4A4">Dopey</string>
    <string name="Q4A5">Clumsy</string>
    <string name="Q4A6">Bashful</string>
    <string name="Question5">Who is Kocoum (from Pocahontas)?</string>
    <string name="Q5A1">Pocahontas\' pet racoon</string>
    <string name="Q5A2">Pocahontas\' best (human) friend</string>
    <string name="Q5A3">Pocahontas\' father</string>
    <string name="Q5A4">A mighty warrior whom Pocahontas\' father chose for her husband</string>
    <string name="Q5A5">It\'s Grandmother Willow\'s real name</string>
    <string name="Q6A1">1980</string>
    <string name="Q6A2">1989</string>
    <string name="Q6A3">1992</string>
    <string name="Q6A4">1996</string>
    <string name="Q6A5">1999</string>
    <string name="submit_button">Submit and check the score!</string>
    <string name="submit_and_next">Submit and go to the next question</string>
    <string name="low_score_message">You have seen some of the Disney classics for sure, but you do not really care about them enough to remember the details. Good news is - there are so many great ones you did not see yet!</string>
    <string name="mid_score_message">You certainly know your Disney classics, but it seems rewatching some of them is in order, have fun!</string>
    <string name="high_score_message">WOW! You really are an expert on everything Disney, great job!</string>
    <string name="final_score_text">Final Score:</string>
    <string name="zero_score_message">It seems Disney is not really your thing or you just did not have a chance to see any of the great classics. Why not give it a go?</string>

</resources>
